--- a/src/zeit/web/site/templates/centerpage.html
+++ b/src/zeit/web/site/templates/centerpage.html
@@ -28,3 +28,10 @@
                      "zeit.web.site:templates/inc/region/default.html"] ignore missing -%}
     {% endfor %}
 {% endblock main %}
+
+{% block meetrics %}
+    {# meetrics should only track the homepage #}
+    {% if view.is_hp %}
+        {{ super() }}
+    {% endif %}
+{% endblock meetrics %}
