Adjust form elements for ZEIT authors

--- a/sass/web.site/modules/comments/_comment.sass
+++ b/sass/web.site/modules/comments/_comment.sass
@@ -12,6 +12,9 @@ $color-comment-border: $zon_light_grey
 		border-top-width: 0
 		background-color: $color-comment-author-bg
 
+		input, textarea, select
+			background-color: $white
+
 	&--author + & // remove border-top of following comment
 		border-top-width: 0
 
