--- a/sass/web.site/modules/_nav.sass
+++ b/sass/web.site/modules/_nav.sass
@@ -403,6 +403,7 @@ $user-picture-diameter: remify(45px)
 	+pie-clearfix
 	font-size: $font-m
 	letter-spacing: .05em
+	margin: .5em 0 0
 	padding: 0 0 0 $petite
 
 	+respond-min($break-phablet-min)
