--- a/sass/web.site/modules/_breaking-news-banner.sass
+++ b/sass/web.site/modules/_breaking-news-banner.sass
@@ -7,7 +7,10 @@
 	padding: remify(15px) $page-padding
 	text-align: center
 	+respond-min($break-tablet-min)
-		margin-top: remify(24px)
+		// dirty trick to hide the main navigation border
+		// hopefully harmless
+		position: relative
+		top: -1px
 	+respond-min($break-desktop-min)
 		padding-top: remify(20px)
 		padding-bottom: remify(20px)
