--- a/sass/web.site/modules/_main.sass
+++ b/sass/web.site/modules/_main.sass
@@ -3,6 +3,11 @@
 	overflow: hidden // prevent android from wrong zooming
 	+old-ie
 		width: $break-desktop-min
+	+respond-min($break-tablet-min)
+		// dirty trick to hide the main navigation border
+		// hopefully harmless
+		position: relative
+		top: -1px
 
 .main--centerpage
 	padding: 0
