--- a/src/zeit/web/core/templates/inc/inline_js/library.html
+++ b/src/zeit/web/core/templates/inc/inline_js/library.html
@@ -31,9 +31,9 @@
             }
         },
         breakpoint: {
-            value: "",
+            value: '',
             refreshValue: function () {
-                this.value = window.getComputedStyle(document.querySelector('body'), ':before').getPropertyValue('content').replace(/\"/g, '') || 'desktop';
+                this.value = window.getComputedStyle(document.querySelector('body'), ':before').getPropertyValue('content').replace(/\"/g, '').replace(/\'/g, '') || 'desktop';
                 // we need the fallback to desktop to account for a proper value in IE 8 !
             }
         }
