Tweak liveblog CSS

--- a/sass/web.site/modules/liveblog/_wrapper.sass
+++ b/sass/web.site/modules/liveblog/_wrapper.sass
@@ -1,5 +1,5 @@
 .liveblog
-	margin: em(20px) (-$page-padding)
+	margin: em(50px) (-$page-padding) em(20px)
 
 .liveblog-text-wrapper
 	+transition(max-height .5s)
