MAINT: remove all occurences of font TabletGothicNarrow

--- a/sass/web.site/modules/_parquet.sass
+++ b/sass/web.site/modules/_parquet.sass
@@ -60,7 +60,7 @@
 				text-decoration: none
 			background: $spektrum_de_blue
 			color: $white
-			font-family: 'TabletGothicNarrow'
+			font-family: $font-tabletgothic
 			display: block
 			height: remify(60px)
 			left: 0
