--- a/sass/web.site/modules/centerpage/_newsticker.sass
+++ b/sass/web.site/modules/centerpage/_newsticker.sass
@@ -1,5 +1,5 @@
 .newsticker
-	&__head 
+	&__head
 		font-weight: bold
 		margin-bottom: remify(25px)
 		min-height: remify(30px)
@@ -7,7 +7,7 @@
 	&__title
 		font-size: remify(24px)
 		left: 0
-		letter-spacing: $zon-letter-spacing-m 
+		letter-spacing: $zon-letter-spacing-m
 		position: absolute
 	&__link
 		font-size: remify(14px)
@@ -28,18 +28,18 @@
 	font-size: remify(14px)
 
 	&__time
-		display: table-cell 
-		font-family: $font-tabletgothicnarrow
+		display: table-cell
+		font-family: $font-tabletgothic
 		width: remify(36px)
 	&__text
 		display: table-cell
 		padding-left: remify(10px)
 	&__kicker
 		color: $color-text-highlighted
-		font-family: $font-tabletgothicnarrow
+		font-family: $font-tabletgothic
 		font-weight: bold
 		letter-spacing: $zon-letter-spacing-m
 	&__product
-		color: $zon_mid_grey 
+		color: $zon_mid_grey
 		padding-left: remify(5px)
 		font-size: remify(12px)
