--- a/sass/web.site/modules/teaser/_teaser.sass
+++ b/sass/web.site/modules/teaser/_teaser.sass
@@ -56,6 +56,7 @@
 %teaser-kicker
 	display: block
 	color: $color-text-highlighted
+	font-family: $font-tabletgothic
 	font-size: $font-ss
 	font-weight: bold
 	letter-spacing: $zon-letter-spacing-m
