Use SASS constants

--- a/sass/web.site/modules/_nav.sass
+++ b/sass/web.site/modules/_nav.sass
@@ -402,7 +402,7 @@ $user-picture-diameter: remify(45px)
 	+columns(2)
 	+pie-clearfix
 	font-size: $font-m
-	letter-spacing: .05em
+	letter-spacing: $zon-letter-spacing-m
 	margin: .5em 0 0
 	padding: 0 0 0 $petite
 
