--- a/sass/web.site/modules/_parquet.sass
+++ b/sass/web.site/modules/_parquet.sass
@@ -31,7 +31,7 @@
 		display: block
 		font-size: remify(22px)
 		font-weight: bold
-		letter-spacing: 0.03em
+		letter-spacing: $zon-letter-spacing-s
 		line-height: 1.0
 		padding: remify($small--px) $page-padding remify($little--px) $page-padding
 		position: relative
@@ -105,7 +105,7 @@
 			+link-colors($zon_grey)
 			display: block
 			font-size: remify(14px)
-			letter-spacing: 0.03em
+			letter-spacing: $zon-letter-spacing-s
 			text-overflow: ellipsis
 			overflow: hidden
 
