--- a/sass/web.site/modules/teaser/_teaser-buzz.sass
+++ b/sass/web.site/modules/teaser/_teaser-buzz.sass
@@ -5,7 +5,7 @@
 		border-bottom: 1px solid $color-border
 		font-size: $font-s
 		font-weight: bold
-		letter-spacing: 1px
+		letter-spacing: $zon-letter-spacing-l
 		line-height: normal
 		margin: 0 0 $fine 0
 		padding: remify(0 10px 10px 10px)
