Add styling and js logic to submit form

--- a/sass/web.site/modules/comments/_comment-form.sass
+++ b/sass/web.site/modules/comments/_comment-form.sass
@@ -39,6 +39,21 @@
 	&__textarea
 		margin: 1em 0
 		height: 16em
+
+	&__input
+		width: 320px
+		&--error
+			color: #b91109
+
+	&__hint
+		&--error
+			color: #b91109
+
+	&__error
+		padding-top: 10px
+		width: 320px
+		color: #b91109
+
 	&__actions
 		font-size: remify(14px)
 		text-align: right
