Make currently empty pseudo selector optional

--- a/sass/web.site/modules/teaser/_teaser-blog.sass
+++ b/sass/web.site/modules/teaser/_teaser-blog.sass
@@ -5,7 +5,7 @@
 		@extend %teaser-small-media
 		margin-bottom: remify(12px)
 	&__media-item
-		@extend %teaser-media-item
+		@extend %teaser-media-item !optional
 	&__container
 		@extend %teaser-small-container
 	&__heading
