--- a/sass/web.site/modules/teaser/_teaser-column.sass
+++ b/sass/web.site/modules/teaser/_teaser-column.sass
@@ -35,7 +35,7 @@ $teaser-column-mobile-image-size: 80px
 			width: 40%
 			height: 100%
 	&__media-item
-		@extend %teaser-media-item
+		@extend %teaser-media-item !optional
 		+old-ie
 			background: $white
 			margin-left: 20px
