--- a/sass/web.site/modules/teaser/_teaser-large.sass
+++ b/sass/web.site/modules/teaser/_teaser-large.sass
@@ -14,7 +14,7 @@
 	&__media
 		@extend %teaser-media
 	&__media-item
-		@extend %teaser-media-item
+		@extend %teaser-media-item !optional
 	&__text
 		@extend %teaser-text
 	&__byline
