--- a/sass/web.site/modules/teaser/_teaser-printbox.sass
+++ b/sass/web.site/modules/teaser/_teaser-printbox.sass
@@ -58,7 +58,8 @@
 			width: auto
 
 	&__media-item
-		@extend %teaser-media-item
+		@extend %teaser-media-item !optional
+		width: 100%
 
 	&__text
 		@extend %teaser-text
