--- a/sass/web.site/modules/teaser/_teaser-series.sass
+++ b/sass/web.site/modules/teaser/_teaser-series.sass
@@ -19,7 +19,7 @@
 		@extend %teaser-media
 		@extend %teaser-small-media
 	&__media-item
-		@extend %teaser-media-item
+		@extend %teaser-media-item !optional
 	&__container
 		@extend %teaser-small-container
 	&__heading
