--- a/sass/web.site/modules/teaser/_teaser-small-minor.sass
+++ b/sass/web.site/modules/teaser/_teaser-small-minor.sass
@@ -34,7 +34,7 @@
 			width: auto
 			+order(2)
 	&__media-item
-		@extend %teaser-media-item
+		@extend %teaser-media-item !optional
 	&__inner
 		+order(3)
 	&__combined-link
