--- a/sass/web.site/modules/teaser/_teaser-parquet-large.sass
+++ b/sass/web.site/modules/teaser/_teaser-parquet-large.sass
@@ -22,7 +22,7 @@
 			width: 100%
 
 	&__media-item
-		@extend %teaser-media-item
+		@extend %teaser-media-item !optional
 	&__heading
 		@extend %teaser-heading
 	&__combined-link
