--- a/sass/web.site/modules/teaser/_teaser-parquet-small.sass
+++ b/sass/web.site/modules/teaser/_teaser-parquet-small.sass
@@ -17,7 +17,7 @@
 	&__container
 		@extend %teaser-small-container
 	&__media-item
-		@extend %teaser-media-item
+		@extend %teaser-media-item !optional
 	&__heading
 		@extend %teaser-heading
 	&__combined-link
