--- a/sass/web.site/modules/teaser/_teaser-small.sass
+++ b/sass/web.site/modules/teaser/_teaser-small.sass
@@ -4,7 +4,7 @@
 		@extend %teaser-media
 		@extend %teaser-small-media
 	&__media-item
-		@extend %teaser-media-item
+		@extend %teaser-media-item !optional
 	&__container
 		@extend %teaser-small-container
 	&__heading
