ZON-1900: grey background for nextread without image

--- a/sass/web.site/modules/article/_nextread.sass
+++ b/sass/web.site/modules/article/_nextread.sass
@@ -1,5 +1,7 @@
 .nextread
 	padding: 40px 0
+	&--without-image
+		background: $zon_light_grey
 	&__link
 		display: block
 		margin: 0 (-$page-padding)
