ZON-1900: nextread without image in full width on mobile

--- a/sass/web.site/modules/article/_nextread.sass
+++ b/sass/web.site/modules/article/_nextread.sass
@@ -2,6 +2,7 @@
 	padding: 40px 0
 	&--without-image
 		background: $zon_light_grey
+		margin: remify(40px) (-$page-padding) 0 (-$page-padding) // 40px topmargin until other elements are build
 	&__link
 		display: block
 		margin: 0 (-$page-padding)
