Make currently empty pseudo selector optional

--- a/sass/web.site/modules/teaser/_column-format.sass
+++ b/sass/web.site/modules/teaser/_column-format.sass
@@ -26,7 +26,7 @@ $teaser-column-image-width-fullwidth: 210px
 	margin: 0
 
 %teaser-column__media-item
-	@extend %teaser-media-item
+	@extend %teaser-media-item !optional
 	+old-ie
 		background: $white
 		margin-left: 20px
