ZON-1900: fix positioning of CTA/lead for nextread without image

--- a/sass/web.site/modules/article/_nextread.sass
+++ b/sass/web.site/modules/article/_nextread.sass
@@ -67,7 +67,7 @@
 				width: remify(70px)
 			&--without-image
 				height: auto
-				margin: 0 auto
+				margin: 0 auto remify(16px)
 				position: static
 		&__media
 			margin: 0
