Setup error messages for zeit.magazin

--- a/sass/web.magazin/modules/_comments.sass
+++ b/sass/web.magazin/modules/_comments.sass
@@ -107,6 +107,17 @@ $comments-min-width: $comments__break-outside - $max-page-width
     padding-top: $page-padding
     padding-bottom: $large
 
+.comments__hint--error
+    color: #b91109
+
+.comments__error
+    width: 100%
+    color: #b91109
+    padding-top: 10px
+
+.comments__input
+    width: 100%
+
 .comments__list
     +respond-max($comments__break-overlap)
         top: 0px !important
