--- a/src/zeit/web/magazin/templates/inc/article/comments.html
+++ b/src/zeit/web/magazin/templates/inc/article/comments.html
@@ -47,13 +47,29 @@
 		<div class="comments__head" id="js-comments-head">
 		{% if view.comments_allowed %}
 			{% if request.authenticated_userid -%}
-			<form method="POST" class="comment__form" id="js-comments-form">
+			<form method="POST" class="comment__form js-submit-comment" id="js-comments-form">
+				{% if not request.session.user.name %}
+				    <p class="comments__hint">
+				    <strong>Achtung: </strong>Die Registrierung bei ZEIT ONLINE erfolgt nur mit Ihrer E-Mail-Adresse. Um kommentieren zu können, benötigen Sie allerdings noch einen zusätzlichen Benutzernamen. Diesen können Sie hier anlegen.
+				    </p>
+				    <p>
+					    <input name="username"
+					    placeholder="Ihr Benutzername"
+					    class="js-required comments__input"></input>
+				    </p>
+				{% endif %}
 				<p>
 					<textarea name="comment" placeholder="Ihr Kommentar" class="js-required"></textarea>
 					<input type="hidden" name="action" value="comment">
 					<input type="hidden" name="pid" value="">
 				</p>
-				<div class="comment__form__note comment__form__note--casual">angemeldet als <a href="{{ request.registry.settings.community_host }}/user/{{ request.session.user.uid }}">{{ request.session.user.name|e }}</a></div>
+				<div class="comment__form__note comment__form__note--casual">
+                                    {% if request.session.user.name %}
+                                        angemeldet als <a href="{{ request.registry.settings.community_host }}/user/{{ request.session.user.uid }}">{{ request.session.user.name|e }}</a>
+                                    {% else %}
+                                        angemeldet, <a href="{{ request.registry.settings.community_host }}/user/{{ request.session.user.uid }}">kein Benutzername</a>
+				    {% endif %}
+				</div>
 				<div class="comment__form__actions">
 					<input type="submit" class="button" value="Kommentieren" disabled />
 				</div>
