FIX: set !optional where needed

--- a/sass/web.site/modules/teaser/_teaser-fullwidth-column.sass
+++ b/sass/web.site/modules/teaser/_teaser-fullwidth-column.sass
@@ -4,7 +4,7 @@
 	&__media
 		@extend %teaser-column__media
 	&__media-item
-		@extend %teaser-column__media-item
+		@extend %teaser-column__media-item !optional
 	&__series-label
 		@extend .teaser-large__series-label
 	&__heading
