--- a/sass/web.site/modules/teaser/_teaser-small-column-minor.sass
+++ b/sass/web.site/modules/teaser/_teaser-small-column-minor.sass
@@ -3,7 +3,7 @@
 	&__media
 		@extend %teaser-column__media
 	&__media-item
-		@extend %teaser-column__media-item
+		@extend %teaser-column__media-item !optional
 	&__container
 		@extend %teaser-small-container
 	&__series-label
