--- a/sass/web.site/modules/teaser/_teaser-small-column.sass
+++ b/sass/web.site/modules/teaser/_teaser-small-column.sass
@@ -3,7 +3,7 @@
 	&__media
 		@extend %teaser-column__media
 	&__media-item
-		@extend %teaser-column__media-item
+		@extend %teaser-column__media-item !optional
 	&__series-label
 		@extend .teaser-small__series-label
 	&__heading
