Remove some line breaks in tpl

--- a/src/zeit/web/magazin/templates/inc/article/comments.html
+++ b/src/zeit/web/magazin/templates/inc/article/comments.html
@@ -53,9 +53,7 @@
 					<strong>Achtung: </strong>Die Registrierung bei ZEIT ONLINE erfolgt nur mit Ihrer E-Mail-Adresse. Um kommentieren zu können, benötigen Sie allerdings noch einen zusätzlichen Benutzernamen. Diesen können Sie hier anlegen.
 					</p>
 					<p>
-						<input name="username"
-						placeholder="Ihr Benutzername"
-						class="js-required comments__input"></input>
+						<input name="username" placeholder="Ihr Benutzername" class="js-required comments__input"></input>
 					</p>
 				{% endif %}
 				<p>
