--- a/sass/web.site/modules/_forms.sass
+++ b/sass/web.site/modules/_forms.sass
@@ -10,6 +10,10 @@ select
 	font-size: remify(15px)
 	letter-spacing: $zon-letter-spacing-s
 	padding: remify(10px 20px)
+	&.error
+		background-color: $color-input-bg--error
+		border-color: $color-input-border--error
+		color: $color-input--error
 	&:focus
 		background-color: $color-input-bg--focus
 		border-color: $color-input-border--focus
