--- a/sass/web.site/modules/comments/_comment-form.sass
+++ b/sass/web.site/modules/comments/_comment-form.sass
@@ -41,18 +41,33 @@
 		height: 16em
 
 	&__input
-		width: 320px
-		&--error
-			color: #b91109
+		max-width: remify(320px)
+		width: 100%
 
 	&__hint
+		margin: 0 0 remify(20px)
 		&--error
-			color: #b91109
+			color: $color-text-highlighted
 
 	&__error
-		padding-top: 10px
-		width: 320px
-		color: #b91109
+		+transition(opacity .3s, visibility .3s)
+		color: $color-text-highlighted
+		max-width: remify(320px)
+		opacity: 0
+		padding-top: remify(10px)
+		visibility: hidden
+		width: 100%
+		&--visible
+			opacity: 1
+			visibility: visible
+
+	&__sso-username
+		border-color: $zon_light_grey
+		border-style: solid
+		border-width: 1px 0
+		margin: remify(20px) 0
+		padding: remify(20px) 0
+		font-size: remify(15px)
 
 	&__actions
 		font-size: remify(14px)
