ZON-1695: Add maxlength attribute for comment text

--- a/src/zeit/web/magazin/templates/inc/article/comments.html
+++ b/src/zeit/web/magazin/templates/inc/article/comments.html
@@ -57,7 +57,7 @@
 					</p>
 				{% endif %}
 				<p>
-					<textarea name="comment" placeholder="Ihr Kommentar" class="js-required"></textarea>
+					<textarea name="comment" placeholder="Ihr Kommentar" class="js-required" maxlength="1500"></textarea>
 					<input type="hidden" name="action" value="comment">
 					<input type="hidden" name="pid" value="">
 				</p>
