ZON-1695: Jetzt stimmt's …

--- a/src/zeit/web/site/templates/inc/comments/comment-form.html
+++ b/src/zeit/web/site/templates/inc/comments/comment-form.html
@@ -11,7 +11,7 @@
 {% else %}
 	{% set submit_value = 'Kommentar senden' %}
 
-	{% if not request.session.user.name %}
+	{% if request.authenticated_userid and not request.session.user.name %}
 		{% set submit_value = 'Absenden' %}
 	{% endif %}
 
