MAINT: switch to new version of TabletGothic

--- a/sass/web.core/font-faces/_tablet_base.sass
+++ b/sass/web.core/font-faces/_tablet_base.sass
@@ -3,6 +3,6 @@
 @import url("//hello.myfonts.net/count/28b678")
 
 // Tablet Gothic
-+font-face('TabletGothic', inline-font-files('tablet/288647_2_0.woff', woff), false, normal, normal)
++font-face('TabletGothic', font-files('tabletgothic/TabletGothic.woff', woff), false, normal, normal)
 // Tablet Gothic Bold
-+font-face('TabletGothic', inline-font-files('tablet/28B678_0_0.woff', woff), false, bold, normal)
++font-face('TabletGothic', font-files('tabletgothic/TabletGothic-Bold.woff', woff), false, bold, normal)
