--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -7,6 +7,10 @@
 
 @import "../vendor/normalize.css"
 
+// fonts
+@import "../web.core/font-faces/tablet_base"
+@import "../web.core/font-faces/franziska_base"
+
 @import "utils"
 @import "functions"
 @import "constants"
@@ -15,7 +19,6 @@
 @import "modules/breakpoints-to-js"
 @import "modules/defaults"
 @import "modules/basics"
-@import "modules/fonts"
 @import "modules/forms"
 @import "modules/header"
 @import "modules/nav"
