MAINT: re-introduce own fonts module in z.w.site

--- a/sass/web.site/screen.sass
+++ b/sass/web.site/screen.sass
@@ -7,10 +7,6 @@
 
 @import "../vendor/normalize.css"
 
-// fonts
-@import "../web.core/font-faces/tablet_base"
-@import "../web.core/font-faces/franziska_base"
-
 @import "utils"
 @import "functions"
 @import "constants"
@@ -19,6 +15,7 @@
 @import "modules/breakpoints-to-js"
 @import "modules/defaults"
 @import "modules/basics"
+@import "modules/fonts"
 @import "modules/forms"
 @import "modules/header"
 @import "modules/nav"
