--- a/sass/web.site/modules/article/_nextread.sass
+++ b/sass/web.site/modules/article/_nextread.sass
@@ -23,7 +23,6 @@
 			margin-bottom: remify(30px)
 	&__media
 		margin: 0 (-$page-padding) remify(14px) (-$page-padding)
-		position: relative
 	&__media-item
 		max-width: auto
 		width: 100%
@@ -45,6 +44,7 @@
 	.nextread
 		margin: remify(40px) (-$page-padding) 0 (-$page-padding) // 40px topmargin until other elements are build
 		padding: 0
+		+teaser-image-text-shadow // TODO: nur --with-image
 		&__link
 			margin: 0
 			padding: 0
@@ -75,20 +75,8 @@
 				position: static
 		&__media
 			margin: 0
-			&:after
-				bottom: 0
-				display: block
-				content: ''
-				left: 0
-				opacity: 1 // designer wanted 0.7
-				position: absolute
-				right: 0
-				top: 0
-				+background-image(linear-gradient(-180deg, rgba(0,0,0,0.15) 0%, rgba(0,0,0,0.50) 100%))
-				a:hover &
-					+background-image(linear-gradient(-180deg, rgba(0, 0, 0, 0.15) 0%, rgba(0, 0, 0, 0.7) 100%))
-				.lt-ie10 &
-					background: rgba(0,0,0,0.4)
+			+darken-on-hover
+			+teaser-image-dark-overlay($angle: 0deg)
 		&__helper // absolute positioning in a container that has variing width and margin auto: a mess
 			height: em(250px) // intentional em usage
 			max-width: remify(660px)
